<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenuLayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">

        <!-- Here are buttons from MainMenuActivity -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:weightSum="6"
            android:padding="15dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/statistics"
                android:id="@+id/menu_statistics"
                android:background="@drawable/button"
                android:clickable="true"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:onClick="onMenuItemClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battery_data"
                android:id="@+id/menu_batteryData"
                android:background="@drawable/button"
                android:clickable="true"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:onClick="onMenuItemClick"
                android:layout_marginTop="5dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/factory_test"
                android:id="@+id/menu_factoryTest"
                android:background="@drawable/button"
                android:clickable="true"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:onClick="onMenuItemClick"
                android:layout_marginTop="5dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calibrate_sensors"
                android:id="@+id/menu_calibrateSensors"
                android:background="@drawable/button"
                android:clickable="true"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:onClick="onMenuItemClick"
                android:layout_marginTop="5dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limit_setup"
                android:id="@+id/menu_limitSetup"
                android:background="@drawable/button"
                android:clickable="true"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:onClick="onMenuItemClick"
                android:layout_marginTop="5dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="25dp"
                android:text="@string/exit"
                android:id="@+id/menu_exit"
                android:background="@drawable/button"
                android:clickable="true"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:onClick="onMenuItemClick" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.5" />
</LinearLayout>