<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    tools:context="com.tobyrich.dev.hangarapp.activities.FactoryTestActivity">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="7">
            <Button
                android:id="@+id/check_engine"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingLeft="15dp"
                android:text="@string/check_engine"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/rudder_left"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingLeft="15dp"
                android:text="@string/rudder_left"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/rudder_right"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingLeft="15dp"
                android:text="@string/rudder_right"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.5" />
</LinearLayout>




