<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tobyrich.dev.hangarapp.StatisticsActivity"
    android:orientation="horizontal"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.6">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="7"
            android:showDividers="middle|end"
            style="@android:style/Widget.DeviceDefault.ListView"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_flight_duration"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalFlightDuration"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_flight_duration"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastFlightDuration"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_height"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxHeight"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_height"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastHeight"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_rpm"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxRpm"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_rpm"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastRpm"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_G_force"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxGForce"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_G_force"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lastGForce"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eco"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ecoRanking"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image" />
    </RelativeLayout>
</LinearLayout>