<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tobyrich.dev.hangarapp.activities.CalibrateSensorsActivity"
    android:orientation="horizontal"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.3"
        android:paddingTop="15dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="7"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:id="@+id/xAxis_label"
                android:text="@string/x_axis"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/yAxis_label"
                android:text="@string/y_axis"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/z_axis"
                android:id="@+id/zAxis_label"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:paddingTop="15dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="7"
            android:gravity="right"
            android:paddingRight="15dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/xAxis_value"
                android:background="@drawable/input"
                android:ems="5"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:inputType="number|numberDecimal"
                android:gravity="right|center_vertical"
                android:paddingRight="5dp"
                android:layout_marginTop="5dp"
                android:editable="true"
                android:imeOptions="actionDone"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:id="@+id/yAxis_value"
                android:ems="5"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:inputType="number|numberDecimal"
                android:gravity="right|center_vertical"
                android:paddingRight="5dp"
                android:layout_marginTop="5dp"
                android:editable="true"
                android:imeOptions="actionDone"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/zAxis_value"
                android:background="@drawable/input"
                android:ems="5"
                android:textColor="#7ca700"
                android:textSize="20sp"
                android:textStyle="bold"
                android:inputType="number|numberDecimal"
                android:gravity="right|center_vertical"
                android:paddingRight="5dp"
                android:layout_marginTop="5dp"
                android:editable="true"
                android:imeOptions="actionDone"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.5" />
</LinearLayout>